# moseq-reports-maker

./: README.md  pyproject.toml
msq_maker/: cli.py  config.py  core.py  model.py  msq.py  util.py
msq_maker/monkey_patch/: __init__.py  make_crowd_matrix.py  retrieve_pcs_from_slices.py
msq_maker/producers/: __init__.py  base.py  behavioral_distance.py  crowd_movies.py  entropy.py  groups.py  label_map.py  sample_manifest.py  scalars.py  spinograms.py  syllable_clips.py  transitions.py  usage.py
scripts/: fix_model.README.md  fix_model.py
